# Tracking-Collar

./: .gitmodules  ADXL345.cpp  ADXL345.h  ADXL345_Read.ino  SPI-Milestone.atsln  platformio.ini  tracking_collar_1.ino
MotorMovement/: Motor.cpp  MotorMovement.h  MotorSet.cpp  compile_commands.json
TurnSignal/: TurnSignal.cpp  TurnSignal.h  compile_commands.json
collar_server/: TCPServer.py  aserver.py
esp32/: .ccls  Makefile  platformio.ini
esp32/examples/platform-examples/espidf-storage-sdcard/: .ccls  platformio.ini
esp32/include/: Sensor.hpp
esp32/lib/: examples
esp32/lib/lora/: LoRa.hpp
esp32/lib/mesh/: Mesh.cpp  Mesh.hpp
esp32/lib/pres_temp/: PressTemp.cpp  PressTemp.hpp
esp32/lib/tunnel/: Makefile  aserver.cpp  client.cpp  client.hpp  server.cpp
esp32/src/: sdkconfig  tracking_collar.cpp
lib/ADXL345/: .ccls  ADXL345.cpp  ADXL345.hpp
lib/SD_Storage/: SD_IO.cpp  SD_IO.hpp
lib/gps/: UltiGPS.cpp  UltiGPS.hpp
lib/pres_temp/: PressTemp.cpp  PressTemp.hpp
lib/rtc/: vma301.cpp  vma301.hpp
lib/tunnel/: AsyncTCP.hpp  client  multiclient
lib/ztnet/: CMakeLists.txt
lopymesh/: Mesh.py  boot.py  main.py  pymakr.conf
src/: tracking_collar.cpp
tiny_gps/: frankenstein2.ino
tunnel/: CMakeLists.txt  aserver
ztnet/: main.cpp
ztnet/include/: libzt
